function support for lamnda->compute rename
