# lib/server/function-lambda/src/get_function.js
@@ -12,10 +12,6 @@ module.exports = function lambda_get_function(req, res, next) {
       }
     }
     res.status(200);
-    if (r.lambda && r.lambda.memory_size) {
-      r.lambda.memorySize = r.lambda.memory_size;
-      delete r.lambda.memory_size;
-    }
     if (r.schedule && Object.keys(r.schedule).length === 0) {
       delete r.schedule;
     }
@@ -43,9 +39,19 @@ module.exports.core = function lambda_get_function_core(options, cb) {
       } catch (e) {
         return cb(e);
       }
-      if (d.Body.lambda) {
-        delete d.Body.lambda.runtime;
+      if (d.Body.lambda && !d.Body.compute) {
+        d.Body.compute = d.Body.lambda;
       }
+      delete d.Body.lambda;
+
+      if (d.Body.compute) {
+        delete d.Body.compute.runtime;
+        if (d.Body.compute.memory_size) {
+          d.Body.compute.memorySize = d.Body.compute.memory_size;
+          delete d.Body.compute.memory_size;
+        }
+      }
+
       delete d.Body.internal;
       delete d.Body.buildId;
       delete d.Body.functionId;
